# DigOutBox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  release_text.md
.github/workflows/: check_mode.yml  controller_release.yml  documentation.yml  gui_release.yml  package_testing.yml  release.yml
DigIOBoxController/requirements/: base.txt
DigIOBoxController/src/main/python/: device_comm.py  serial_comm.py  test.py  util_fns.py
controller/: README.md  pyproject.toml  release_text.md
controller/examples/: hw_check.py
controller/src/controller/: __init__.py  device_comm.py  util_fns.py
controller/src/main/python/: channel_setup.py  channel_widget.py  dialogs.py  group_setup.py  main.py  statusindicator.py  utils.py  widgets.py
controller/src/requirements/: base.txt
controller/tests/: __init__.py  conftest.py
controller_cli/: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
controller_cli/controller_cli/: __init__.py  device_comm.py  serial_comm.py  util_fns.py
controller_cli/examples/: hw_check.py
controller_cli/src/controller_cli/: device_comm.py
controller_cli/tests/: __init__.py  conftest.py  test_device_comm.py
controller_gui/: README.md  pyproject.toml  release_text.md
controller_gui/src/main/python/: channel_setup.py  dialogs.py  group_setup.py  main.py  widgets.py
docs/: acknowledgement.md  changelog.md  cli.md  conf.py  controller.md  dev.md  firmware.md  gui.md  hardware.md  images.md  index.md  index.rst  license.rst  requirements.txt  versioning.md
docs/digoutbox/: cli.rst  firmware.rst  gui.rst  hardware.rst  images.rst  versioning.rst
firmware/: README.md
firmware/DigIOBox_fw_v010/: DigIOBox_fw_v010.ino
firmware/DigOutBox_fw_v010/: DigOutBox_fw_v010.ino  config.h
firmware/DigOutBox_fw_v020/: DigOutBox_fw_v020.ino  config.h
firmware/DigOutBox_interlocked_fw_v010/: DigOutBox_interlocked_fw_v010.ino
firmware/configs/: .~lock.gfl002.xlsx#  README.md  gfl002.xlsx  gfl002_fw_v020.xlsx  llnl001.xlsx  llnl001_fw_v020.xlsx  llnl001_interlocked.h  llnl001_v020.h
firmware/old/DigOutBox_fw_v010/: config.h
hardware/: README.md
hardware/v1/: DigIOBox_10chan.FCStd  DigIOBox_10chan.FCStd1
old/src/main/python/: main.py  test.py
