[project]
name = "controller-cli"
version = "0.2.0"
description = "Python interface for DigOutBox."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "pyserial>=3.5",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "darglint>=1.8.1",
    "flake8>=7.0.0",
    "flake8-bandit>=4.1.1",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=24.1.17",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.2",
    "bandit>=1.7.6",
    "hypothesis>=6.96.1",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-sugar>=0.9.7",
    "mock_serial>=0.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/controller_cli"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=controller_cli -v"
testpaths = "tests"
