[project]
name = "controller-cli"
version = "0.2.0"
description = "Python interface for DigOutBox."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "pyserial>=3.5",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hypothesis>=6.96.1",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-sugar>=0.9.7",
    "mock_serial>=0.0.1",
]

[tool.rye.scripts]
test_cov = "pytest --cov ."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/controller_cli"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=controller_cli -v"
testpaths = "tests"
