[project]
name = "controller_gui"
version = "0.2.0"
description = "DigOutBox Controller GUI."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "pyqtconfig>=0.9.2",
    "qtpy>=2.4.1",
    "PyQt6>=6.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
gui = "python src/main/python/main.py"  # uses fbs or not, depending on installation status
fbs = "fbs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/main/python"]
